# gh-repo-summerizer

./: .gitignore  README.md  config.toml  main.py  pyproject.toml  run_tests.py  test_quick.py  test_simple.py
ghsum/: __init__.py  __main__.py  cli.py  config.py  github.py  summarizer.py
ghsum/cli/: __init__.py  main.py
ghsum/core/: __init__.py  config.py  github.py  summarizer.py
prompts/: portfolio_summary.txt  protfolio_summary2.txt
tests/: __init__.py  test_basic_functionality.py  test_model_connectivity.py
